--- a/style.css
+++ b/style.css
@@ -19,4 +19,48 @@ border: none;
 padding: 9px 25px;
 border-radius: 8px;
 cursor: pointer;
+
+}
+
+.cat1,.cat2,.cat3{
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+.cat1{
+    background-image: linear-gradient(to bottom,#FF9C35  0%,#FFD019 100% );    
+}
+.cat2{
+   background-image: linear-gradient(to bottom,#FF589B 0%, #FF136F 100%); 
+   
+}
+.cat3{
+    background-image: linear-gradient(to bottom,#4289FF 0%, #07F8C3 100%);   
+    
+}
+
+.categories h1{
+    color: #F5F5F5;
+}
+.categories img{
+    width:100px;
+}
+
+.card{
+    border: none;
+    box-shadow: 5px 5px 10px lightgray;
+    border-radius: 10px;
+}
+.card-footer{
+    background-color: white;
+    border-top: none;
+}
+
+#subscribe{
+    height: 300px;
+}
+.subscribe h6{
+    color: gray;
+}
+footer{
+    text-align: center;
 }
